# process-control-software

./: .gitignore  README.md  design-requirements-specification.md  pyproject.toml
docs/: architecture.md  requirements-traceability.md
examples/: walkthrough.py
process_control/: __init__.py  provenance.py  synthetic.py
process_control/components/: __init__.py  component1_identification.py  component2_planner.py  component3_simulator.py  component4_optimizer.py  component5_diagnostics.py  component6_regression.py
process_control/data/: __init__.py  quality.py  schema.py
process_control/foundations/: __init__.py  counterfactual.py  engine.py  excitation.py  gp.py  noise_floor.py  stats.py  validation.py
tests/: conftest.py  test_components.py  test_foundations.py  test_integration.py
