[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "process-control-software"
version = "0.1.0"
description = "Run-to-run (R2R) process control: identification, experiment planning, MHE/MPC simulation, controller optimization, diagnostics, and broad predictive regression — unified by variance accounting against a noise floor."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Process/Control Engineering" }]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
test = ["pytest>=7.0", "matplotlib>=3.6"]

[tool.setuptools.packages.find]
include = ["process_control*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
